Updates and new pages

--- a/about.html
+++ b/about.html
@@ -60,11 +60,12 @@
       </div>
       <div class="about">
         <h2 class="abouttitle">About Me</h2>
-        <p class="abouttext">I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests. You can contact me at contact(at)felixdoll.net.</p>
+        <p class="abouttext">I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Computer Science and Graphic Design at American University in Washington DC, as a way to combine my skills and interests. You can contact me at contact(at)felixdoll.net.</p>
       </div>
 
       <div class="footer">
           <p>© 2019 Felix Doll</p>
+          <p>Designed and Coded by Felix</p>
           <p>
             <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="Felix's GitHub Page"></a>
             <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="Felix's LinkedIn Profile"></a>
