--- a/bonewars.html
+++ b/bonewars.html
@@ -12,9 +12,9 @@
     </script>
     <script src="scripts.js"></script>
     <meta charset="utf-8">
-    <title>Portfolio: 4NCA Remake</title>
+    <title>Portfolio: Story</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="Felix Doll: 4NCA">
+    <meta name="description" content="Felix Doll: Story Project">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
 
-      <div class="header4nca">
+      <div class="headerbonewars">
 
         <div id="navscreen" class="navscreen">
           <nav class="mobnav">
@@ -54,12 +54,12 @@
 
       </div>
 
-      <h1 class="itemtitle">4NCA Remake</h1>
+      <h1 class="itemtitle">Wikipedia Article Website</h1>
 
       <div class="iteminfo">
-        <img class="itemdesktop" src="img/resourcecon.jpg" alt="Screenshot of 4NCA Remake">
-        <p class="itemtext">This project was to partially remake the Fourth National Climate Assessment website, with a focus on keeping it small, so it would work well on slow internet. I used HTML, CSS and JavaScript, plus GitHub Pages to make this site. <a href="https://felixnw.github.io/resource_conservation/index.html">Link to project</a></p>
-        <img class="itemmobile" src="img/resourceconmob.jpg" alt="Screenshot of 4NCA Remake on mobile">
+        <img clas="itemdesktop" src="img/story.jpg" alt="Screenshot of story project">
+        <p class="itemtext">The requirements for this project were to find an article on Wikipedia and make a website using the contents of the article. I picked this article about "The Bone Wars," and chose to split up the sections into separate pages, with a three column layout and simple color scheme. I used HTML, CSS, and GitHub Pages to make this site. <a href="https://felixnw.github.io/story/index.html">Link to project</a> </p>
+        <img class="itemmobile" src="img/storymob.jpg" alt="Screenshot of story project on mobile">
       </div>
 
 
