--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
           </a>
         </div>
 
-        <div class="portfolio">
+        <!-- <div class="portfolio">
           <a class="tilelink" href=portfolio.html>
               <img src="img/conference.jpg" alt="Screenshot of portfolio">
               <h2>Reserved space for this website</h2>
           </a>
-        </div>
+        </div> -->
 
         <div id="physical" class="avenir">
           <a class="tilelink" href=avenir.html>
@@ -122,6 +122,7 @@
 
       <div class="footer">
           <p>© 2019 Felix Doll</p>
+          <p>Designed and Coded by Felix</p>
           <p>
             <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="Felix's GitHub Page"></a>
             <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="Felix's LinkedIn Profile"></a>
