--- a/item.html
+++ b/item.html
@@ -65,6 +65,7 @@
 
       <div class="footer">
           <p>© 2019 Felix Doll</p>
+          <p>Designed and Coded by Felix</p>
           <p>
             <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="Felix's GitHub Page"></a>
             <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="Felix's LinkedIn Profile"></a>
