--- a/privdc.html
+++ b/privdc.html
@@ -12,9 +12,9 @@
     </script>
     <script src="scripts.js"></script>
     <meta charset="utf-8">
-    <title>Portfolio: 4NCA Remake</title>
+    <title>Portfolio: Conference Website</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="Felix Doll: 4NCA">
+    <meta name="description" content="Felix Doll: Conference Website Project">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
 
-      <div class="header4nca">
+      <div class="headerprivdc">
 
         <div id="navscreen" class="navscreen">
           <nav class="mobnav">
@@ -54,12 +54,12 @@
 
       </div>
 
-      <h1 class="itemtitle">4NCA Remake</h1>
+      <h1 class="itemtitle">Conference Website</h1>
 
       <div class="iteminfo">
-        <img class="itemdesktop" src="img/resourcecon.jpg" alt="Screenshot of 4NCA Remake">
-        <p class="itemtext">This project was to partially remake the Fourth National Climate Assessment website, with a focus on keeping it small, so it would work well on slow internet. I used HTML, CSS and JavaScript, plus GitHub Pages to make this site. <a href="https://felixnw.github.io/resource_conservation/index.html">Link to project</a></p>
-        <img class="itemmobile" src="img/resourceconmob.jpg" alt="Screenshot of 4NCA Remake on mobile">
+        <img clas="itemdesktop" src="img/conference.jpg" alt="Screenshot of conference website">
+        <p class="itemtext">The assignment was to come up with an imaginary conference and make a responsive website describing the event to those who could potentially attend. This conference was about privacy and surveillance in technology. I used HTML, CSS, and GitHub Pages to make this site. <a href="https://felixnw.github.io/conference/index.html">Link to project</a></p>
+        <img class="itemmobile" src="img/conferencemob.jpg" alt="Screenshot of conference website on mobile">
       </div>
 
 
