--- a/ssd.html
+++ b/ssd.html
@@ -12,9 +12,9 @@
     </script>
     <script src="scripts.js"></script>
     <meta charset="utf-8">
-    <title>Portfolio: 4NCA Remake</title>
+    <title>Portfolio: Surveillance Self Defense Remake</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="Felix Doll: 4NCA">
+    <meta name="description" content="Felix Doll: SSD Remake Projects">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
 
-      <div class="header4nca">
+      <div class="headerssd">
 
         <div id="navscreen" class="navscreen">
           <nav class="mobnav">
@@ -54,12 +54,12 @@
 
       </div>
 
-      <h1 class="itemtitle">4NCA Remake</h1>
+      <h1 class="itemtitle">Surveillance Self-Defense Remake</h1>
 
       <div class="iteminfo">
-        <img class="itemdesktop" src="img/resourcecon.jpg" alt="Screenshot of 4NCA Remake">
-        <p class="itemtext">This project was to partially remake the Fourth National Climate Assessment website, with a focus on keeping it small, so it would work well on slow internet. I used HTML, CSS and JavaScript, plus GitHub Pages to make this site. <a href="https://felixnw.github.io/resource_conservation/index.html">Link to project</a></p>
-        <img class="itemmobile" src="img/resourceconmob.jpg" alt="Screenshot of 4NCA Remake on mobile">
+        <img clas="itemdesktop" src="img/typography.jpg" alt="Screenshot of SSD Remake">
+        <p class="itemtext">This was a partial remake of the Electronic Frontier Foundation's Surveillance Self Defense site. The original site was somewhat plain looking, so I chose a bright color scheme to make it pop. I used HTML, CSS, and GitHub Pages to make this site. <a href="https://felixnw.github.io/typography/index.html">Link to project</a></p>
+        <img class="itemmobile" src="img/typographymob.jpg" alt="Screenshot of SSD Remake on mobile">
       </div>
 
 
